--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald|Permanent+Marker');
 body {
   margin: 0;
-  background-color: #eee;
+  background-color: #14213d;
 }
 
 h1, h2, p {
