--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ header div h1 {
 
 
 main div {
-  border: 3px solid #668284;
+  border: 3px solid #ffffff;
   padding: 10px;
   background-color: #fca311;
 }
