--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ header div h1 {
 
 
 main div {
-  border: 3px solid #ffffff;
+  border: 3px solid #000000;
   padding: 10px;
-  background-color: #fca311;
+  background-color: #ffffff;
 }
 
 
