--- a/style.css
+++ b/style.css
@@ -16,17 +16,17 @@ header h1 {
 }
 
 main div header h2 {
-  color: #668284;
+  color: #ffffff;
   font-size: 24px;
 }
 
 main div p {
-  font-size: 16px;
+  font-size: 20px;
 }
 
 main div  {
   color: #668284;
-  font-size: 24px;
+  font-size: 30px;
 }
 
 main div header h2 , 
