--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat|Oswald|Permanent+Marker');
+
 body {
   margin: 0;
   background-color: #14213d;
@@ -47,7 +47,7 @@ header div h1 {
   text-align: center;
   font-size: 70px;
   margin: 0;
-  font-family: 'Permanent Marker', cursive;
+  font-family: cursive;
 }
 
 
