--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header div h1 {
 main div {
   border: 3px solid #000000;
   padding: 10px;
-  background-color: #ffffff;
+  background-color: #14213D;
 }
 
 ul ol {
