--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main div p {
 }
 
 main div  {
-  color: #668284;
+  color: #E5E5E5;
   font-size: 30px;
 }
 
@@ -36,7 +36,6 @@ footer div nav p {
 }
 
 h1,
-ul,
 nav > p {
   margin: 10;
   padding: 10px;
@@ -58,7 +57,7 @@ main div {
   background-color: #14213D;
 }
 
-ul ol {
+ul, ol {
   text- align: center;
 }
 
