--- a/style.css
+++ b/style.css
@@ -6,18 +6,14 @@ body {
   background-color: #14213d;
 }
 
-h1, h2, p {
-  color: 000000;
-  font-size: 14px;
-}
 
 header h1 {
-  color: #fca311;
+  color: #2bfff4;
 }
 
 main div header h2 {
-  color: #ffffff;
-  font-size: 24px;
+  color: #E5E5E5;
+  font-size: 35px;
 }
 
 main div p {
@@ -40,7 +36,7 @@ header div h1 {
   text-align: center;
   font-size: 70px;
   margin: 0;
-  font-family: cursive;
+  font-family: serif;
 }
 
 
@@ -51,12 +47,11 @@ main div {
   background-color: #14213D;
 }
 
-ul, ol {
-  text- align: center;
+ul, ol, li {
+  text-align: center;
 }
 
 footer nav p {
   color: #000000;
 }
-
 
