--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 body {
   margin: 0;
   background-color: #14213d;
+  height: 100%;
 }
 
 /* changes my name at the top color. though in the end i just used a very simalar color to the rest of the text.*/
