--- a/style.css
+++ b/style.css
@@ -61,5 +61,20 @@ li, h3 {
 }
 
 
+a {
+  color: red;
+}
+
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: grey;
+}
+
+a:hover {
+  color: lightgrey; 
+}
 
 
