--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header h1 {
   color: #e1fffd;
 }
 /*changes the h2 color and size*/
-main div header h2 {
+main div article h2 {
   color: #E5E5E5;
   font-size: 35px;
 }
@@ -26,7 +26,7 @@ main div  {
   font-size: 30px;
 }
 /*aligns mostt of the text to the ceter*/
-main div header h2 , 
+main div article h2 , 
 main div p, 
 footer div nav p {
   text-align: center;
