--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 body {
   margin: 0;
   background-color: #14213d;
-  height: 100%;
 }
 
 /* changes my name at the top color. though in the end i just used a very simalar color to the rest of the text.*/
@@ -38,6 +37,7 @@ header div h1 {
   font-size: 70px;
   margin: 0;
   font-family: serif;
+  height: 100px;
 }
 
 
